# amplifier-bundle-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  bundle.dot  bundle.md  pyproject.toml
.amplifier/digital-twin-universe/profiles/: memory-bundle-e2e.yaml  memory-bundle-load.yaml  memory-migration-e2e.yaml  memory-native-e2e.yaml
.github/workflows/: contract.yml
agents/: archivist.md  curator.md  docent.md  memory-curator.md
behaviors/: curate.yaml  memory.yaml  mempalace.yaml
context/: instructions.md  memory-instructions.md  memory-manifest.yaml  project-context-guide.md
docs/: spec-v1.2.0-gene-transfer.md
docs/development/: dtu.md
docs/eval/: EVALUATION.md  briefing-rerank-benchmark.md
docs/plans/: 2026-07-07-native-cutover-design.md  2026-07-07-substrate-adapter-completion-design.md  spec-v1.2.0-gene-transfer.md
docs/plans/research-archive/: gene-transfer-v1.2.0.tex
docs/research/: .gitignore  Makefile  context-sleep-study.md
docs/research/figures/: phase3-and-garden.dot
modules/context-sleep/: README.md  pyproject.toml
modules/context-sleep/amplifier_module_context_sleep/: __init__.py
modules/hooks-behavioral-write/: README.md  pyproject.toml
modules/hooks-behavioral-write/amplifier_module_hooks_behavioral_write/: __init__.py
modules/hooks-memory-briefing/: README.md  pyproject.toml
modules/hooks-memory-briefing/amplifier_module_hooks_memory_briefing/: __init__.py
modules/hooks-memory-briefing/tests/: conftest.py  test_importance_rerank.py
modules/hooks-memory-capture/: README.md  pyproject.toml
modules/hooks-memory-capture/amplifier_module_hooks_memory_capture/: __init__.py
modules/hooks-memory-capture/tests/: conftest.py  test_capture_skipped_bridge.py  test_drawer_filed_coordinator_bridge.py  test_manifest_signals.py  test_orchestrator_contract.py
modules/hooks-memory-interject/: README.md  pyproject.toml
modules/hooks-memory-interject/amplifier_module_hooks_memory_interject/: __init__.py
modules/hooks-memory-interject/tests/: conftest.py  test_privacy_defaults.py  test_retrieval.py
modules/hooks-mempalace-briefing/: README.md  pyproject.toml
modules/hooks-mempalace-briefing/amplifier_module_hooks_mempalace_briefing/: __init__.py
modules/hooks-mempalace-briefing/tests/: test_importance_rerank.py
modules/hooks-mempalace-capture/: README.md  pyproject.toml
modules/hooks-mempalace-capture/amplifier_module_hooks_mempalace_capture/: __init__.py
modules/hooks-mempalace-capture/tests/: conftest.py  test_manifest_signals.py  test_shadow_gateway.py
modules/hooks-mempalace-interject/: README.md  pyproject.toml
modules/hooks-mempalace-interject/amplifier_module_hooks_mempalace_interject/: __init__.py
modules/hooks-mempalace-interject/tests/: conftest.py  test_privacy_defaults.py  test_retrieval.py  test_store_alignment.py
modules/hooks-project-context/: README.md  pyproject.toml
modules/hooks-project-context/amplifier_module_hooks_project_context/: __init__.py
modules/tool-memory/: README.md  pyproject.toml
modules/tool-memory/amplifier_module_tool_memory/: __init__.py  client.py  coordinator_bridge.py  daemon.py  embedder.py  embeddings.py  event_emitter.py  garden.py  migrate.py  phase3.py  salience.py  store.py  usage.py
modules/tool-memory/amplifier_module_tool_memory/scripts/: load_captures.py  mutation.py  server_concurrency_check.py  write_cells.py
modules/tool-memory/tests/: conftest.py  test_amplifier_data_gateway.py  test_amplifier_data_store.py  test_client_ensure_daemon.py  test_curate_dot.py  test_curate_scripts.py  test_curator_phase3.py  test_daemon.py  test_embedder.py  test_event_emitter.py  test_manifest.py  test_migrate_kg_n5.py  test_native_roundtrip.py  test_native_store_reads.py  test_palace_events.py  test_palace_garden.py  test_palace_tool_contract.py  test_phase3_overrides.py  test_substrate_pin.py
modules/tool-mempalace/: README.md  pyproject.toml
modules/tool-mempalace/amplifier_module_tool_mempalace/: __init__.py  coordinator_bridge.py  embeddings.py  event_emitter.py  garden.py  manifest.py  phase3.py
modules/tool-mempalace/amplifier_module_tool_mempalace/scripts/: __init__.py  amplifier_data_gateway.py  dualwrite_compare.py  load_captures.py  memory_store.py  server_concurrency_check.py  write_cells.py
modules/tool-mempalace/tests/: test_amplifier_data_gateway.py  test_amplifier_data_store.py  test_curate_dot.py  test_curate_scripts.py  test_curator_phase3.py  test_dualwrite_compare.py  test_event_emitter.py  test_manifest.py  test_palace_events.py  test_palace_garden.py  test_palace_tool_contract.py  test_phase3_overrides.py  test_substrate_pin.py  test_tool_shadow_ops.py
pipelines/: curate.dot
project-context/: EXPERIMENT_JOURNAL.md  HANDOFF.md  PROVENANCE.md
skills/memory/: SKILL.md
skills/mempalace/: SKILL.md
study/: finalize.sh
study/analysis/: analyze.py  make_figures.py
study/artifacts/: pilot.pids  pilot_ext.pids  results_calibration.jsonl
study/harness/: prompts.json  run_pilot.py  scorer.py
study/paper/: fill_paper.py  paper.md  paper_filled.md
study/preregistration/: preregistration.md
study/profiles/: study-without-memory.yaml
study/trials/: results_calibration.analysis.json  results_calibration.analysis.md  results_pilot.analysis.json  results_pilot.analysis.md  results_pilot.jsonl
study/trials/with-memory/: s1_pilot_001_with-memory.json  s1_pilot_002_with-memory.json  s1_pilot_003_with-memory.json  s1_pilot_004_with-memory.json  s1_pilot_005_with-memory.json  s1_pilot_006_with-memory.json  s1_pilot_007_with-memory.json  s1_pilot_008_with-memory.json  s1_pilot_009_with-memory.json  (+102 more)
tests/: conftest.py  test_behavioral_write.py  test_benchmark_recall.py  test_context_sleep.py  test_contract.py  test_coordinator_bridge.py  test_hook_emissions.py  test_mutable_embeddings.py  test_mutation_seam.py  test_salience_gate.py  test_usage_weighting.py  test_vendor_sweep.py
tests/integration/: conftest.py  test_event_wiring.py  test_native_memory_e2e.py  test_native_smoke.py  test_smoke.py  test_substrate_shadow_e2e.py
(+119 files in other folders)
