[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-bundle-memory-tests"
version = "0.0.0"
description = "Bundle-level integration test runner"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
# Root pyproject exists only for pytest/pyright config at the bundle level.
# No Python package lives at the repo root — all code is in modules/*/ with
# their own pyproject.toml files. Declare no top-level packages so setuptools
# doesn't try to auto-discover and get confused by agents/, behaviors/,
# context/, modules/, skills/ as "flat-layout packages".
packages = []

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "amplifier-core>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "benchmark: slow benchmark tests; excluded from default runs. Run with: pytest -m benchmark",
]
addopts = "-m 'not benchmark'"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
