[project]
name = "amplifier-module-context-sleep"
version = "0.1.0"
description = "Amplifier context module — sleep-time LLM consolidation with research-validated faithful guardrails"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Michael Jabbour" },
]
# amplifier-core is a peer dependency — it is provided by the host runtime.
# Do NOT declare it here (amplifier-foundation BUNDLE_GUIDE anti-pattern).
dependencies = []

[project.entry-points."amplifier.modules"]
context-sleep = "amplifier_module_context_sleep:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_context_sleep"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
reportGeneralTypeIssues = false
reportCallIssue = false
reportArgumentType = false
