[project]
name = "amplifier-module-hooks-behavioral-write"
version = "2.0.0"
description = "Amplifier hook module — T1-HOOK-1: salience-gated, post-session behavioral write that recomputes drawer importance from session outcome and applies a reversible update through the amplifier-data seam"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Michael Jabbour" },
]
dependencies = [
    # amplifier-core is a peer dependency -- provided by the host runtime.
    # Do NOT declare it here (amplifier-foundation BUNDLE_GUIDE anti-pattern).
    #
    # amplifier-module-tool-memory is a sibling module provided by bundle
    # composition (behaviors/memory.yaml), not pip -- see BUNDLE_GUIDE;
    # availability guarded at import (try/except ImportError in
    # amplifier_module_hooks_behavioral_write/__init__.py).
    #
    # Mirror of tool-memory's amplifier-data pin -- MUST move in lockstep
    # with modules/tool-memory/pyproject.toml (same SHA). Module activation
    # installs with `uv pip install --no-sources`, and uv rejects
    # *transitive* URL dependencies ("URL dependencies must be expressed as
    # direct requirements") -- so every module that depends on tool-memory
    # must restate the pin directly. Direct URL restated deliberately: uv
    # --no-sources rejects transitive URL deps -- NOT the sibling-dep
    # anti-pattern; amplifier-data is an external library.
    "amplifier-data @ git+https://github.com/michaeljabbour/amplifier-data@09482f1fa569ba8407894cad3a32f8ab6aecbc3d",
]

[project.entry-points."amplifier.modules"]
hooks-behavioral-write = "amplifier_module_hooks_behavioral_write:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_behavioral_write"]


[dependency-groups]
dev = [
    "ruff>=0.1",
    "pyright>=1.1",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
reportGeneralTypeIssues = false

# Required: the amplifier-data dependency above is a direct (git+) URL reference;
# hatchling refuses to build metadata containing direct references without this flag.
[tool.hatch.metadata]
allow-direct-references = true
