[project]
name = "amplifier-module-hooks-memory-briefing"
version = "2.0.0"
description = "Amplifier hook module — injects a memory wake-up briefing at session start using semantic search, knowledge graph, and agent diary"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Michael Jabbour" },
]
dependencies = [
    "amplifier-core>=0.1.0",
    # amplifier-module-tool-memory already hard-depends on amplifier-data
    # + fastembed (native cutover) -- there is no vendor dependency
    # anymore -- every memory read goes through MemoryClient via
    # ensure_daemon(), no vendor subprocess.
    "amplifier-module-tool-memory>=2.0.0",
    # Mirror of tool-memory's amplifier-data pin -- MUST move in lockstep
    # with modules/tool-memory/pyproject.toml (same SHA). Module activation
    # installs with `uv pip install --no-sources`, and uv rejects
    # *transitive* URL dependencies ("URL dependencies must be expressed as
    # direct requirements") -- so every module that depends on tool-memory
    # must restate the pin directly.
    "amplifier-data @ git+https://github.com/michaeljabbour/amplifier-data@09482f1fa569ba8407894cad3a32f8ab6aecbc3d",
]

[project.entry-points."amplifier.modules"]
hooks-memory-briefing = "amplifier_module_hooks_memory_briefing:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_memory_briefing"]

[tool.uv.sources]
amplifier-module-tool-memory = { path = "../tool-memory", editable = true }

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
reportGeneralTypeIssues = false

# Required: the amplifier-data dependency above is a direct (git+) URL reference;
# hatchling refuses to build metadata containing direct references without this flag.
[tool.hatch.metadata]
allow-direct-references = true
