[project]
name = "amplifier-module-hooks-mempalace-briefing"
version = "1.0.0"
description = "Amplifier hook module — injects a MemPalace wake-up briefing at session start using semantic search, knowledge graph, and agent diary"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Michael Jabbour" },
]
dependencies = [
    "amplifier-core>=0.1.0",
    "mempalace>=3.3.0",
]

[project.entry-points."amplifier.modules"]
hooks-mempalace-briefing = "amplifier_module_hooks_mempalace_briefing:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_mempalace_briefing"]
