[project]
name = "amplifier-module-hooks-mempalace-briefing"
version = "1.1.0"
description = "Amplifier hook module — injects a MemPalace wake-up briefing at session start using semantic search, knowledge graph, and agent diary"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Michael Jabbour" },
]
dependencies = [
    "amplifier-core>=0.1.0",
    "mempalace>=3.3.0",
    "amplifier-module-tool-mempalace>=1.0.0",
]

[project.entry-points."amplifier.modules"]
hooks-mempalace-briefing = "amplifier_module_hooks_mempalace_briefing:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_mempalace_briefing"]

[tool.uv.sources]
amplifier-module-tool-mempalace = { path = "../tool-mempalace", editable = true }

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
reportGeneralTypeIssues = false
