[project]
name = "amplifier-module-hooks-mempalace-capture"
version = "1.1.0"
description = "Amplifier hook module — automatically files verbatim tool outputs as MemPalace drawers with auto-detected wing and room"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Michael Jabbour" },
]
dependencies = [
    "amplifier-core>=0.1.0",
    "mempalace>=3.3.0",
    "amplifier-module-tool-mempalace>=1.0.0",
]

[project.entry-points."amplifier.modules"]
hooks-mempalace-capture = "amplifier_module_hooks_mempalace_capture:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_mempalace_capture"]

[tool.uv.sources]
amplifier-module-tool-mempalace = { path = "../tool-mempalace", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.1",
    "pyright>=1.1",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
reportGeneralTypeIssues = false
