[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-hooks-project-context"
version = "1.0.0"
description = "Amplifier hook that integrates the project-context coordination file system"
requires-python = ">=3.11"
dependencies = ["amplifier-core"]

[project.entry-points."amplifier.modules"]
hooks-project-context = "amplifier_module_hooks_project_context:mount"
