[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-hooks-project-context"
version = "1.1.0"
description = "Amplifier hook that integrates the project-context coordination file system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core",
    "amplifier-module-tool-memory>=1.0.0",
    # Mirror of tool-memory's amplifier-data pin -- MUST move in lockstep
    # with modules/tool-memory/pyproject.toml (same SHA). Module activation
    # installs with `uv pip install --no-sources`, and uv rejects
    # *transitive* URL dependencies ("URL dependencies must be expressed as
    # direct requirements") -- so every module that depends on tool-memory
    # must restate the pin directly.
    "amplifier-data @ git+https://github.com/michaeljabbour/amplifier-data@09482f1fa569ba8407894cad3a32f8ab6aecbc3d",
]

[project.entry-points."amplifier.modules"]
hooks-project-context = "amplifier_module_hooks_project_context:mount"

[tool.uv.sources]
amplifier-module-tool-memory = { path = "../tool-memory", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.1",
    "pyright>=1.1",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
reportGeneralTypeIssues = false

# Required: the amplifier-data dependency above is a direct (git+) URL reference;
# hatchling refuses to build metadata containing direct references without this flag.
[tool.hatch.metadata]
allow-direct-references = true
