[project]
name = "amplifier-module-tool-mempalace"
version = "1.2.0"
description = "High-level Amplifier tool module for MemPalace — palace search, remember, knowledge graph, traverse, diary, mine, and events operations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Michael Jabbour" },
]
dependencies = [
    "amplifier-core>=0.1.0",
    "mempalace>=3.3.0",
]

# OPTIONAL substrate backend for the AmplifierDataMemoryStore seam
# (scripts/memory_store.py). amplifier-data is NEVER auto-installed by a base
# `pip install -e .` or an Amplifier compose of the memory bundle -- the seam
# stays behind a lazy import and raises loudly if absent. The
# behavioral-plasticity conductor bundle is what actually requests this
# substrate (via its own dep-amplifier-data module's [project.dependencies]);
# this extra documents the canonical, version-pinned dependency so
# `pip install -e '.[substrate]'` reproduces exactly what the conductor composes.
[project.optional-dependencies]
substrate = [
    "amplifier-data @ git+https://github.com/michaeljabbour/amplifier-data@c1107b4d04da987353d54aa023b7b2a3b506fe01",
]

[project.entry-points."amplifier.modules"]
tool-mempalace = "amplifier_module_tool_mempalace:mount"

[project.scripts]
# Cold-path consolidation pipeline nodes (invoked by pipelines/curate.dot).
mempalace-load-captures = "amplifier_module_tool_mempalace.scripts.load_captures:main"
mempalace-write-cells = "amplifier_module_tool_mempalace.scripts.write_cells:main"
# §8 amplifier-data dual-write / regeneration-equivalence migration harness.
mempalace-dualwrite-compare = "amplifier_module_tool_mempalace.scripts.dualwrite_compare:main"
# Multi-process single-writer companion-server concurrency check.
mempalace-server-concurrency-check = "amplifier_module_tool_mempalace.scripts.server_concurrency_check:main"
# Authenticated MCP gateway service over amplifier-data (the running shadow).
mempalace-amplifier-data-gateway = "amplifier_module_tool_mempalace.scripts.amplifier_data_gateway:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Required because the optional `substrate` extra declares a direct URL
# (git+) reference; hatchling refuses to build metadata otherwise.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_mempalace"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
# Pre-existing issues in __init__.py with ToolResult keyword args and Tool class vars
reportCallIssue = false
reportArgumentType = false
reportAssignmentType = false
