[project]
name = "amplifier-module-tool-mempalace"
version = "1.2.0"
description = "High-level Amplifier tool module for MemPalace — palace search, remember, knowledge graph, traverse, diary, mine, and events operations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Michael Jabbour" },
]
dependencies = [
    "amplifier-core>=0.1.0",
    "mempalace>=3.3.0",
]

# OPTIONAL substrate backend for the AmplifierDataMemoryStore seam
# (scripts/memory_store.py). amplifier-data is NEVER auto-installed by a base
# `pip install -e .` or an Amplifier compose of the memory bundle -- the seam
# stays behind a lazy import and raises loudly if absent. The
# behavioral-plasticity conductor bundle is what actually requests this
# substrate (via its own dep-amplifier-data module's [project.dependencies]);
# this extra documents the canonical, version-pinned dependency so
# `pip install -e '.[substrate]'` reproduces exactly what the conductor composes.
[project.optional-dependencies]
# PIN COUPLING (keep in lockstep): this exact amplifier-data SHA is mirrored in the
# conductor's amplifier-bundle-behavioral-plasticity at
# modules/dep-amplifier-data/pyproject.toml [project.dependencies]. Both pins MUST
# move together in one atomic change on any bump -- the conductor-side bump is
# OUT OF SCOPE for this repo (owned by that bundle) and must happen in lockstep;
# see HANDOFF.md for the explicit flag. A full SHA (not @main) is chosen for
# reproducibility because `uv pip install` resolves this URL per-install
# (amplifier-expert guidance). Bumped 2026-07-07 from c1107b4 (main was 7+
# functional commits ahead: Plan 4a intent-compiler, Plan 4b convergent
# integrity) to the amplifier-data main HEAD at substrate-adapter-completion
# implementation time -- includes write_batch/Transaction (envelope.py),
# add_embedding/query_vector (dim-agnostic vector lens), assert_fact/
# invalidate_fact/query_facts/timeline (temporal lens), and iter_embeddings.
substrate = [
    "amplifier-data @ git+https://github.com/michaeljabbour/amplifier-data@09482f1fa569ba8407894cad3a32f8ab6aecbc3d",
]

[project.entry-points."amplifier.modules"]
tool-mempalace = "amplifier_module_tool_mempalace:mount"

[project.scripts]
# Cold-path consolidation pipeline nodes (invoked by pipelines/curate.dot).
mempalace-load-captures = "amplifier_module_tool_mempalace.scripts.load_captures:main"
mempalace-write-cells = "amplifier_module_tool_mempalace.scripts.write_cells:main"
# §8 amplifier-data dual-write / regeneration-equivalence migration harness.
mempalace-dualwrite-compare = "amplifier_module_tool_mempalace.scripts.dualwrite_compare:main"
# Multi-process single-writer companion-server concurrency check.
mempalace-server-concurrency-check = "amplifier_module_tool_mempalace.scripts.server_concurrency_check:main"
# Authenticated MCP gateway service over amplifier-data (the running shadow).
mempalace-amplifier-data-gateway = "amplifier_module_tool_mempalace.scripts.amplifier_data_gateway:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Required because the optional `substrate` extra declares a direct URL
# (git+) reference; hatchling refuses to build metadata otherwise.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_mempalace"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
# Pre-existing issues in __init__.py with ToolResult keyword args and Tool class vars
reportCallIssue = false
reportArgumentType = false
reportAssignmentType = false
